tests/parser/good/record_lit.hel
// @name record_lit
// @phase parser
// @expect success

type Point = { x: f64, y: f64 };

p = Point{ x: 1.0, y: 2.0 };
empty = Point{}
